k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinica-api
  labels:
    app: clinica-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinica-api
  template:
    metadata:
      labels:
        app: clinica-api
    spec:
      containers:
        - name: clinica-api
          image: luisdavid01/clinicaapi:latest
