k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatclinica-api
  labels:
    app: chatclinica-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatclinica-api
  template:
    metadata:
      labels:
        app: chatclinica-api
    spec:
      containers:
        - name: chatclinica-api
          image: luisdavid01/clinicachat:latest
