k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinica-web
  labels:
    app: clinica-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinica-web
  template:
    metadata:
      labels:
        app: clinica-web
    spec:
      containers:
        - name: clinica-web
          image: luisdavid01/clinicanextjs:latest
