k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinicaapi-service
spec:
  selector:
    app: clinica-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
