k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinicachat-service
spec:
  selector:
    app: chatclinica-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
