k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: clinica-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
