k8s/clinica-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: clinica-gateway
spec:
  gatewayClassName: clinica-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
