k8s/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clinicaapi-httproute
spec:
  parentRefs:
    - name: clinica-gateway
  hostnames:
    - "clinicaapi.internal"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: clinicaapi-service
          port: 3001
