k8s/chat-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clinicachat-httproute
spec:
  parentRefs:
    - name: clinica-gateway
  hostnames:
    - "clinica.internal"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: clinicachat-service
          port: 8081
